# cpp-lab

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cpp-build-test-coverage.yml
include/: DeleteMe.h
src/: DeleteMe.cpp  main.cpp
src/core/basics/: InitializeVariable.cpp  Operations.cpp
src/core/datatypes/: CReferences.cpp
src/core/datatypes/class/: CConstructors.cpp  CDestructors.cpp  RoleOfThreeFiveZero.cpp  SallowDeepCopying.cpp
src/patterns/behavioral/: ChainOfCommand.cpp  Iterator.cpp
src/patterns/creational/: Singleton.cpp
src/patterns/structural/: Adapter.cpp  Bridge.cpp  Composite.cpp  Facade.cpp  Flyweight.cpp  Proxy.cpp
tests/: DeleteMeTest.cpp
